[tool.poetry]
name = "yt-backup"
version = "0.1.0"
description = ""
authors = ["TauSynth <the.dark.neutronium.tau.synth@gmail.com>"]
readme = "README.md"
packages = [{include = "yt_backup"}]

[tool.poetry.dependencies]
python = "^3.10"
configparser = "5.0.0"
google-api-python-client = "1.8.2"
google-auth-oauthlib = "0.4.1"
python-dateutil = "2.8.1"
SQLAlchemy = "1.3.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
